JDK-83883658 [lworld] Add value class test coverage to java.util.Collections